# mrs2

./: .gitignore  README.md
companions/capd-capdDynSys-4.2.153/capdDynSys4/examples/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
companions/capd-capdDynSys-4.2.153/capdDynSys4/include/: Makefile.am  Makefile.in
companions/capd-capdDynSys-4.2.153/capdMake/libcapd/: Makefile.am  Makefile.in  aclocal.m4  capd-config-dev.in  capd-config.in  configure  configure.ac
companions/mrs-1.0-YatracosThis/: .gitignore  AUTHORS  COPYRIGHT  ChangeLog  Doxyfile  LogDoxygen  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  READMEConfig.txt  SetUpNewExampleMakefiles.txt  THANKS  TODO  aclocal.m4  bootstrap  config.h  config.status  configure  configure.ac  configure.scan  custom_config.sh
companions/mrs-1.0-YatracosThis/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
companions/mrs-1.0-YatracosThis/docs/html/: AHABCObsMCMCDblHurdle_8cpp.js  AHABCObsMCMCDblHurdle_8cpp.shtml  AHABCObsMCMCDblHurdle_8cpp_source.shtml  AHABCObsMCMCL1_8cpp.js  AHABCObsMCMCL1_8cpp.shtml  AHABCObsMCMCL1_8cpp_source.shtml  AHABCObsMCMCLeaves_8cpp.js  AHABCObsMCMCLeaves_8cpp.shtml  AHABCObsMCMCLeaves_8cpp_source.shtml  AHABCSimMCMCDblHurdle_8cpp.js  AHABCSimMCMCDblHurdle_8cpp.shtml  AHABCSimMCMCDblHurdle_8cpp_source.shtml  AHABCSimMCMCL1_8cpp.js  AHABCSimMCMCL1_8cpp.shtml  AHABCSimMCMCL1_8cpp_source.shtml  AHABCSimMCMCLeaves_8cpp.js  (+2137 more)
companions/mrs-1.0-YatracosThis/examples/: Makefile  Makefile.am  Makefile.in
companions/mrs-1.0-YatracosThis/src/: .gdb_history  AIAsubpaving.cpp  AIAsubpaving.hpp  Fobj.hpp  GOpt.cpp  GOpt.hpp  MRSampler.cpp  MRSampler.hpp  Makefile  Makefile.am  Makefile.in  SmallClasses.hpp  adaptivehistogram.cpp  adaptivehistogram.hpp  adaptivehistogramcollator.cpp  adaptivehistogramcollator.hpp  adaptivehistogramvalidation.cpp  adaptivehistogramvalidation.hpp  adaptivehistogramvcollator.cpp  adaptivehistogramvcollator.hpp  collatorspnode.cpp  collatorspnode.hpp  collatorspvnode.cpp  collatorspvnode.hpp  cxsc.hpp  docu.hpp  errorfunc.cpp  errorfunc.hpp  fei_evalobj.cpp  fei_evalobj.hpp  functionestimator_interval.cpp  functionestimator_interval.hpp  functionestimator_real.cpp  functionestimator_real.hpp  histall.hpp  histevalobj.hpp  histevalobjval.hpp  histmcmcobjs.hpp  histpenalty.hpp  ia_ad.cc  (+70 more)
mrs-2.0/: .gitignore  AUTHORS  CONTENTS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  custom_config.sh
mrs-2.0/docs/images/: new_footer.html  new_header.html  new_stylesheet.css
mrs-2.0/examples/: Makefile.am  Makefile.in
mrs-2.0/examples/AIA/: Makefile.in
mrs-2.0/examples/CXSC/: Makefile.am  Makefile.in  example.cpp  lexample.cpp
mrs-2.0/examples/GOpt/: Makefile.am  Makefile.in
mrs-2.0/examples/MappedSP/: Makefile.am  Makefile.in
mrs-2.0/examples/MappedTargets/: GaussianFobj.cpp  GaussianFobj.hpp  Makefile.am  Makefile.in  RosenDensityFobj.cpp  RosenDensityFobj.hpp  RosenFobj.cpp  RosenFobj.hpp  SphereFobj.cpp  SphereFobj.hpp  TestOscFobj.cpp  TestRosenFobj.cpp  TestSphereFobj.cpp  oscFobj1.cpp  oscFobj1.hpp
mrs-2.0/examples/MixtureTargets/: Makefile.am  Makefile.in  mixture_mvn.cpp  testMixtureMVN.cpp
mrs-2.0/examples/MooreRejSam/: Makefile.am  Makefile.in
mrs-2.0/examples/StatsSubPav/: Makefile.am  Makefile.in
mrs-2.0/examples/newSubPav/: Makefile.am  Makefile.in
mrs-2.0/examples/targets/: FBinomialPartition.cpp  FBinomialPartition.hpp  FCFN3.cpp  FCFN3.hpp  FIsIt1or2Coins.cpp  FIsIt1or2Coins.hpp  FPhyloPOT.cpp  FPhyloPOT.hpp  FRosenbrock.cpp  FShiryaev1D.cpp  FShiryaev1D.hpp  FWitchesHat.hpp  PhyloTree.cpp  PhyloTree.hpp
mrs-2.0/l1LTIDE/: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  draw.py  hyperplane.cpp
mrs-2.0/l1LTIDE/proposal/: prop.bib  prop.tex
mrs-2.0/l1LTIDE/src/: bsp.cpp  pointUtils.cpp
mrs-2.0/src/: AIAsubpaving.cpp  AIAsubpaving.hpp  Fobj.hpp  GOpt.cpp  GOpt.hpp  MCMCGRAuto.cpp  MCMCGRAuto.hpp  MCMCGRAutoNew.cpp  MCMCGRAutoNew.hpp  MCMCGRDiagnosticInterval.cpp  MCMCGRDiagnosticInterval.hpp  MCMCGRDiagnosticIntervalAvDepth.cpp  MCMCGRDiagnosticIntervalAvDepth.hpp  MCMCGRDiagnosticIntervalCherries.cpp  MCMCGRDiagnosticIntervalCherries.hpp  MCMCGRDiagnosticIntervalLeaves.cpp  MCMCGRDiagnosticIntervalLeaves.hpp  MCMCGRDiagnosticPSRF.cpp  MCMCGRDiagnosticPSRF.hpp  MCMCGRDiagnosticPSRFAvDepth.cpp  MCMCGRDiagnosticPSRFAvDepth.hpp  MCMCGRDiagnosticPSRFCherries.cpp  MCMCGRDiagnosticPSRFCherries.hpp  MCMCGRDiagnosticPSRFLeaves.cpp  MCMCGRDiagnosticPSRFLeaves.hpp  MCMCGRDiagnosticPSRFLogpost.cpp  MCMCGRDiagnosticPSRFLogpost.hpp  MCMCPartitionGenerator.cpp  MCMCPartitionGenerator.hpp  MRSampler.cpp  MRSampler.hpp  Makefile.am  Makefile.in  SmallClasses.hpp  adaptivehistogram.cpp  adaptivehistogram.hpp  adaptivehistogram_changeofstateinfo_automcmc.cpp  adaptivehistogram_changeofstateinfo_automcmc.hpp  adaptivehistogram_changeofstateinfo_basic.cpp  adaptivehistogram_changeofstateinfo_basic.hpp  (+95 more)
mrs-2.0/tests/: Makefile.am  Makefile.in
mrs-2.0/tests/TestingFunctionEstimator/: Makefile.am  Makefile.in  TestFunEst.cpp  TestFunEst_PaperExample.cpp  simpleFobj1.hpp  simpleFobj2.cpp  simpleFobj2.hpp
mrs-2.0/tests/TestingIrregularShapes/: Makefile.am  Makefile.in  TestShape.cpp
mrs-2.0/tests/TestingMappedSPs/: Makefile.am  Makefile.in  MappedSP.cpp  MappedSPTesting.cpp  MappedSPTesting.hpp  MappedSPTesting_Framework.hpp
mrs-2.0/tests/TestingNonMapped/: Makefile.am  Makefile.in  testing_tools.cpp  testing_tools.hpp
mrs-2.0/tests/TestingPCF/: Makefile.am  Makefile.in  TestPCF.cpp  TestPCF.hpp  TestPCFArithmetic.cpp  TestPCFArithmeticSpecial.cpp  TestPCFBasic.cpp  TestPCFFunEst.cpp  TestPCFIAE.cpp  TestPCFL1.cpp  TestPCFLogLik.cpp  TestPCFMakeFromHist.cpp  TestPCFMarginalise.cpp  TestPCFNormalise.cpp  TestPCFPtWiseCoverage.cpp  TestPCFRandom.cpp  TestPCFSlice.cpp  TestPCFSmear.cpp  TestPCFTools.cpp  TestPCFTools.hpp  simpleFobj1.cpp
mrs-2.0/tests/TestingRealMapped/: Makefile.am  Makefile.in  TestRealMappedSR.cpp
(+2077 files in other folders)
