SUBDIRS = src examples tests

EXTRA_DIST = bootstrap CONTENTS Doxyfile \
  custom_config.sh \
  docs/images/AIAexample11_33.png \
  docs/images/AIAexample11_35.png \
  docs/images/AIAexample3_3.png \
  docs/images/AIAexample3_4.png \
  docs/images/bivgaussian.png \
  docs/images/CFNCin762Cnin133.png \
  docs/images/Levy_function.png \
  docs/images/LevyT40TargetShape.png \
  docs/images/minimalsp1.png \
  docs/images/MRS.png \
  docs/images/MRSs.png \
  docs/images/NEWexample3_4Coarse.png \
  docs/images/NEWexample3_4Fine.png \
  docs/images/nonminimalsp1.png \
  docs/images/Rosenbrock_function.png \
  docs/images/RSAlg.png \
  docs/images/BGAvgHist.png \
  docs/images/BivGaussHists10.png \
  docs/images/statsspaddingdata.png \
  docs/images/new_footer.html  \
  docs/images/new_header.html  \
  docs/images/new_stylesheet.css

include config/aminclude.am
