
lib_LIBRARIES = libmrs.a
libmrs_a_SOURCES = AIAsubpaving.cpp AIAsubpaving.hpp cxsc.hpp \
debug_control.hpp docu.hpp \
Fobj.hpp GOpt.cpp GOpt.hpp MRSampler.cpp MRSampler.hpp \
adaptivehistogram.cpp adaptivehistogram.hpp \
adaptivehistogramcollator.cpp adaptivehistogramcollator.hpp \
adaptivehistogram_changeofstateinfo_automcmc.cpp \
adaptivehistogram_changeofstateinfo_automcmc.hpp \
adaptivehistogram_changeofstateinfo_basic.cpp \
adaptivehistogram_changeofstateinfo_basic.hpp \
histevalobj.cpp histevalobj.hpp \
histpenalty.cpp histpenalty.hpp \
multitreemanager.cpp multitreemanager.hpp \
nodecompobj.hpp \
histmcmcobjs.cpp histmcmcobjs.hpp \
collatorspnode.cpp collatorspnode.hpp \
spsnode.cpp spsnode.hpp \
rangecollection_hist.cpp rangecollection_hist.hpp \
splitdecisionobj.hpp sptemplates.hpp spalgorithms.hpp spalgorithms.cpp \
spminimalnode.cpp spminimalnode.hpp \
voxel_tools.cpp voxel_tools.hpp \
spnode.cpp spnode.hpp \
sptools.cpp sptools.hpp \
sptypes.hpp \
spsnode_measure_obj.cpp spsnode_measure_obj.hpp \
SmallClasses.hpp toolz.cpp toolz.hpp \
mappedspnode.hpp \
realmappedspnode.cpp realmappedspnode.hpp \
intervalmappedspnode.cpp intervalmappedspnode.hpp \
intervalmappedspnode_measurers.cpp intervalmappedspnode_measurers.hpp \
booleanvalue.cpp booleanvalue.hpp \
booleanvaluemappedspnode.cpp booleanvaluemappedspnode.hpp \
mappedFobj.cpp mappedFobj.hpp \
mappedFobj1D.cpp mappedFobj1D.hpp \
mappedFobj2D.cpp mappedFobj2D.hpp \
spnodevisitor.hpp \
sp_value_visitor.hpp \
sp_expand_visitor.hpp \
sp_check_visitor.cpp sp_check_visitor.hpp\
realexpander_estimate.cpp realexpander_estimate.hpp \
real_estimate.cpp real_estimate.hpp \
real_pointwise_function_estimate.hpp \
real_kde_mid_estimate.cpp real_kde_mid_estimate.hpp \
intervalexpander_estimate.cpp intervalexpander_estimate.hpp \
interval_estimate.cpp interval_estimate.hpp \
booleanvalue_image_expander_estimate.cpp booleanvalue_image_expander_estimate.hpp \
booleanvalue_image_estimate.cpp booleanvalue_image_estimate.hpp \
functionestimator_interval.cpp functionestimator_interval.hpp \
functionestimator_real.cpp functionestimator_real.hpp \
functionestimator_kde.cpp functionestimator_kde.hpp \
functionimage_estimator_booleanvalue.cpp functionimage_estimator_booleanvalue.hpp \
piecewise_constant_function.cpp piecewise_constant_function.hpp \
spatial_object_representation_bv.cpp spatial_object_representation_bv.hpp \
realmappedshapenode.cpp realmappedshapenode.hpp \
polygon_piecewise_function.cpp polygon_piecewise_function.hpp \
fei_evalobj.hpp fei_evalobj.cpp\
MCMCGRAuto.cpp MCMCGRAuto.hpp \
MCMCGRAutoNew.cpp MCMCGRAutoNew.hpp \
MCMCGRDiagnosticPSRF.cpp MCMCGRDiagnosticPSRF.hpp \
MCMCGRDiagnosticPSRFLeaves.cpp MCMCGRDiagnosticPSRFLeaves.hpp \
MCMCGRDiagnosticPSRFCherries.cpp MCMCGRDiagnosticPSRFCherries.hpp \
MCMCGRDiagnosticPSRFAvDepth.cpp MCMCGRDiagnosticPSRFAvDepth.hpp \
MCMCGRDiagnosticPSRFLogpost.cpp MCMCGRDiagnosticPSRFLogpost.hpp \
MCMCGRDiagnosticInterval.cpp MCMCGRDiagnosticInterval.hpp \
MCMCGRDiagnosticIntervalLeaves.cpp MCMCGRDiagnosticIntervalLeaves.hpp \
MCMCGRDiagnosticIntervalCherries.cpp MCMCGRDiagnosticIntervalCherries.hpp \
MCMCGRDiagnosticIntervalAvDepth.cpp MCMCGRDiagnosticIntervalAvDepth.hpp \
MCMCPartitionGenerator.cpp MCMCPartitionGenerator.hpp \
carver_seb.cpp carver_seb.hpp \
mcmc_kde.cpp mcmc_kde.hpp \
norm_kde.cpp norm_kde.hpp \
type_kde.hpp \
subpaving_exception.cpp subpaving_exception.hpp

include_HEADERS =  AIAsubpaving.hpp cxsc.hpp Fobj.hpp GOpt.hpp MRSampler.hpp \
adaptivehistogram.hpp adaptivehistogramcollator.hpp \
adaptivehistogram_changeofstateinfo_automcmc.hpp \
adaptivehistogram_changeofstateinfo_basic.hpp \
histevalobj.hpp histpenalty.hpp \
multitreemanager.hpp nodecompobj.hpp \
histmcmcobjs.hpp collatorspnode.hpp \
spsnode.hpp spalgorithms.hpp rangecollection_hist.hpp \
splitdecisionobj.hpp sptemplates.hpp spminimalnode.hpp \
voxel_tools.hpp spnode.hpp sptools.hpp sptypes.hpp \
spsnode_measure_obj.hpp SmallClasses.hpp toolz.hpp \
mappedspnode.hpp realmappedspnode.hpp intervalmappedspnode.hpp \
intervalmappedspnode_measurers.hpp booleanvalue.hpp \
booleanvaluemappedspnode.hpp mappedFobj.hpp \
mappedFobj1D.hpp mappedFobj2D.hpp spnodevisitor.hpp \
sp_value_visitor.hpp sp_expand_visitor.hpp sp_check_visitor.hpp\
realexpander_estimate.hpp real_estimate.hpp \
real_pointwise_function_estimate.hpp \
real_kde_mid_estimate.hpp \
intervalexpander_estimate.hpp \
interval_estimate.hpp \
booleanvalue_image_expander_estimate.hpp \
booleanvalue_image_estimate.hpp \
functionestimator_interval.hpp \
functionestimator_real.hpp \
functionestimator_kde.hpp \
functionimage_estimator_booleanvalue.hpp \
piecewise_constant_function.hpp \
spatial_object_representation_bv.hpp \
realmappedshapenode.hpp \
polygon_piecewise_function.hpp \
fei_evalobj.hpp \
MCMCGRAuto.hpp \
MCMCGRAutoNew.hpp \
MCMCGRDiagnosticPSRF.hpp \
MCMCGRDiagnosticPSRFLeaves.hpp \
MCMCGRDiagnosticPSRFCherries.hpp \
MCMCGRDiagnosticPSRFAvDepth.hpp \
MCMCGRDiagnosticPSRFLogpost.hpp \
MCMCGRDiagnosticInterval.hpp \
MCMCGRDiagnosticIntervalLeaves.hpp \
MCMCGRDiagnosticIntervalCherries.hpp \
MCMCGRDiagnosticIntervalAvDepth.hpp \
MCMCPartitionGenerator.hpp \
carver_seb.hpp \
mcmc_kde.hpp \
norm_kde.hpp \
type_kde.hpp \
subpaving_exception.hpp spnodeall.hpp histall.hpp

# compile with warnings using variable name set in configure.ac
AM_CXXFLAGS = @WARNING_FLAGS@
