lib_LIBRARIES = libmrs.a

libmrs_a_SOURCES = AIAsubpaving.cpp AIAsubpaving.hpp cxsc.hpp docu.hpp \
Fobj.hpp GOpt.cpp GOpt.hpp MRSampler.cpp MRSampler.hpp \
adaptivehistogram.cpp adaptivehistogram.hpp \
adaptivehistogramcollator.cpp adaptivehistogramcollator.hpp \
histpenalty.hpp \
histevalobj.hpp \
histevalobjval.hpp \
multitreemanager.cpp multitreemanager.hpp \
nodecompobj.hpp nodecompobjval.hpp \
nodecompobjmapped.hpp \
histmcmcobjs.hpp \
collatorspnode.cpp collatorspnode.hpp \
spsnode.cpp spsnode.hpp \
rangecollection.hpp \
splitdecisionobj.hpp sptemplates.hpp spalgorithms.cpp spalgorithms.cpp \
spnode.cpp spnode.hpp sptools.cpp sptools.hpp sptypes.hpp \
SmallClasses.hpp toolz.cpp toolz.hpp \
mappedspnode.hpp \
realmappedspnode.cpp realmappedspnode.hpp \
mappedFobj.hpp mappedFobj.cpp \
mappedFobj1D.cpp mappedFobj1D.hpp \
mappedFobj2D.cpp mappedFobj2D.hpp \
spnodevisitor.hpp \
sp_value_visitor.hpp \
sp_expand_visitor.hpp \
sp_check_visitor.hpp sp_check_visitor.cpp\
piecewise_constant_function.cpp piecewise_constant_function.hpp \
MCMCGRauto.hpp \
subpaving_exception.cpp subpaving_exception.hpp \
spnodeall.hpp histall.hpp \
collatorspvnode.cpp collatorspvnode.hpp spsvnode.cpp spsvnode.hpp \
adaptivehistogramvalidation.cpp adaptivehistogramvalidation.hpp \
adaptivehistogramvcollator.cpp adaptivehistogramvcollator.hpp \
errorfunc.hpp errorfunc.cpp \
../examples/StatsSubPav/ExactInt/Int.h \
../examples/StatsSubPav/ExactInt/Int.cc \
../examples/StatsSubPav/ExactInt/dim2taylor.cpp \
../examples/StatsSubPav/ExactInt/dim2taylor.hpp \
../examples/targets/FLevy2D.cpp ../examples/targets/FLevy2D.hpp \
../examples/targets/FRosenbrock.cpp ../examples/targets/FRosenbrock.hpp \
intervalw.cc intervalw.h ia_ad.cc ia_ad.h round.h itaylor.cc itaylor.h \
fei_evalobj.cpp fei_evalobj.hpp  \
functionestimator_interval.cpp functionestimator_interval.hpp \
functionestimator_real.cpp functionestimator_real.hpp \
intervalmappedspnode.cpp intervalmappedspnode.hpp \
intervalmappedspnode_measurers.cpp intervalmappedspnode_measurers.hpp \
realexpander_estimate.cpp realexpander_estimate.hpp \
real_estimate.cpp real_estimate.hpp \
intervalexpander_estimate.cpp intervalexpander_estimate.hpp \
interval_estimate.cpp interval_estimate.hpp 

include_HEADERS = AIAsubpaving.hpp GOpt.hpp MRSampler.hpp \
sptypes.hpp spnode.hpp spalgorithms.hpp sptemplates.hpp sptools.hpp \
spsnode.hpp nodecompobj.hpp splitdecisionobj.hpp collatorspnode.hpp \
spsvnode.hpp collatorspvnode.hpp \
multitreemanager.hpp histmcmcobjs.hpp histevalobj.hpp histpenalty.hpp histevalobjval.hpp \
adaptivehistogram.hpp adaptivehistogramcollator.hpp \
mappedspnode.hpp realmappedspnode.hpp \
mappedFobj.hpp mappedFobj1D.hpp mappedFobj2D.hpp \
spnodevisitor.hpp \
rangecollection_hist.hpp \
subpaving_exception.hpp piecewise_constant_function.hpp\
cxsc.hpp Fobj.hpp SmallClasses.hpp toolz.hpp spnodeall.hpp histall.hpp \
errorfunc.hpp \
../examples/StatsSubPav/ExactInt/Int.h \
../examples/StatsSubPav/ExactInt/dim2taylor.hpp \
../examples/targets/FLevy2D.hpp ../examples/targets/FRosenbrock.hpp \
adaptivehistogramvalidation.hpp adaptivehistogramvcollator.hpp \
rangecollection.hpp 

