include ${capdMake}/make/common_makefile.mkf

nobase_include_HEADERS = \
capd/autodiff/DagIndexer.h \
capd/autodiff/DagIndexer.hpp \
capd/autodiff/EvalAcos.h \
capd/autodiff/EvalAdd.h \
capd/autodiff/EvalAsin.h \
capd/autodiff/EvalAtan.h \
capd/autodiff/EvalDiv.h \
capd/autodiff/EvalExp.h \
capd/autodiff/EvalLog.h \
capd/autodiff/EvalMul.h \
capd/autodiff/EvalNaturalPow.h \
capd/autodiff/EvalOneMinusSqr.h \
capd/autodiff/EvalPow.h \
capd/autodiff/EvalSinCos.h \
capd/autodiff/EvalSqr.h \
capd/autodiff/EvalSqrt.h \
capd/autodiff/EvalSub.h \
capd/autodiff/EvalUnaryMinus.h \
capd/autodiff/NodeType.h \
capd/autodiff/eval.hpp \
capd/capdlib.h \
capd/covrel/ConesConditions.h \
capd/covrel/GraphicsHSet3D.h \
capd/covrel/GraphicsTripleSet.h \
capd/covrel/GridSet.h \
capd/covrel/GridSets.h \
capd/covrel/HSet.h \
capd/covrel/HSet2D.h \
capd/covrel/HSet3D.h \
capd/covrel/HSetMD.h \
capd/covrel/HSetMD.hpp \
capd/covrel/HSetND.h \
capd/covrel/HSetND.hpp \
capd/covrel/HSetWithCones.h \
capd/covrel/QuadraticForm.h \
capd/covrel/TripleSet.h \
capd/diffAlgebra/BasicC2Curve.h \
capd/diffAlgebra/BasicC2Curve.hpp \
capd/diffAlgebra/BasicCnCurve.h \
capd/diffAlgebra/BasicCnCurve.hpp \
capd/diffAlgebra/BasicCurve.h \
capd/diffAlgebra/BasicCurve.hpp \
capd/diffAlgebra/C0TimeJet.h \
capd/diffAlgebra/C1TimeJet.h \
capd/diffAlgebra/C2Curve.h \
capd/diffAlgebra/C2Curve.hpp \
capd/diffAlgebra/C2TimeJet.h \
capd/diffAlgebra/CnContainer.h \
capd/diffAlgebra/CnCurve.h \
capd/diffAlgebra/CnCurve.hpp \
capd/diffAlgebra/CnTimeJet.h \
capd/diffAlgebra/CoeffTraits.h \
capd/diffAlgebra/Curve.h \
capd/diffAlgebra/Curve.hpp \
capd/diffAlgebra/CurveInterface.h \
capd/diffAlgebra/FadCurve.h \
capd/diffAlgebra/FadCurve.hpp \
capd/diffAlgebra/Hessian.h \
capd/diffAlgebra/Hessian.hpp \
capd/diffAlgebra/HomogenousPolynomial.h \
capd/diffAlgebra/Jet.h \
capd/diffAlgebra/Jet.hpp \
capd/diffAlgebra/Node.h \
capd/diffAlgebra/Node.hpp \
capd/diffAlgebra/Node_explog.hpp \
capd/diffAlgebra/Node_invtrig.hpp \
capd/diffAlgebra/Node_muldiv.hpp \
capd/diffAlgebra/Node_plusminus.hpp \
capd/diffAlgebra/Node_powsqr.hpp \
capd/diffAlgebra/Node_sincos.hpp \
capd/diffAlgebra/ParametricCurve.h \
capd/diffAlgebra/SeriesContainer.h \
capd/diffAlgebra/SolutionCurve.h \
capd/diffAlgebra/TimeRange.h \
capd/diffAlgebra/fdlib.h \
capd/diffAlgebra/lib.h \
capd/diffAlgebra/mplib.h \
capd/diffIncl/DiffInclusion.h \
capd/diffIncl/DiffInclusion.hpp \
capd/diffIncl/DiffInclusionCW.h \
capd/diffIncl/DiffInclusionCW.hpp \
capd/diffIncl/DiffInclusionLN.h \
capd/diffIncl/DiffInclusionLN.hpp \
capd/diffIncl/InclRect2Set.h \
capd/diffIncl/InclRect2Set.hpp \
capd/diffIncl/MultiMap.h \
capd/diffIncl/lib.h \
capd/dynset/AbstractSet.h \
capd/dynset/AffineCoordinateChange.h \
capd/dynset/C0AffineSet.h \
capd/dynset/C0AffineSet.hpp \
capd/dynset/C0BallSet.h \
capd/dynset/C0BallSet.hpp \
capd/dynset/C0DoubletonSet.h \
capd/dynset/C0DoubletonSet.hpp \
capd/dynset/C0FlowballSet.h \
capd/dynset/C0FlowballSet.hpp \
capd/dynset/C0GraphicalSet.h \
capd/dynset/C0HODoubletonSet.h \
capd/dynset/C0HODoubletonSet.hpp \
capd/dynset/C0HOSet.h \
capd/dynset/C0HOSet.hpp \
capd/dynset/C0HOTripletonSet.h \
capd/dynset/C0HOTripletonSet.hpp \
capd/dynset/C0Set.h \
capd/dynset/C0TripletonSet.h \
capd/dynset/C0TripletonSet.hpp \
capd/dynset/C11Rect2.h \
capd/dynset/C11Rect2.hpp \
capd/dynset/C11Rect2Set.h \
capd/dynset/C11Rect2Set.hpp \
capd/dynset/C1AffineSet.h \
capd/dynset/C1AffineSet.hpp \
capd/dynset/C1DoubletonSet.h \
capd/dynset/C1DoubletonSet.hpp \
capd/dynset/C1GraphicalSet.h \
capd/dynset/C1HOSet.h \
capd/dynset/C1HOSet.hpp \
capd/dynset/C1Set.h \
capd/dynset/C2DoubletonSet.h \
capd/dynset/C2DoubletonSet.hpp \
capd/dynset/C2Set.h \
capd/dynset/CnDoubletonSet.h \
capd/dynset/CnDoubletonSet.hpp \
capd/dynset/CnRect2Set.h \
capd/dynset/CnRect2Set.hpp \
capd/dynset/CnSet.h \
capd/dynset/CoordinateSystem.h \
capd/dynset/DefaultPolicy.h \
capd/dynset/DoubletonData.h \
capd/dynset/EnclosureHolder.h \
capd/dynset/HOData.h \
capd/dynset/QRPolicy.h \
capd/dynset/SetTraits.h \
capd/dynset/dynsetLib.h \
capd/dynset/fdlib.h \
capd/dynset/lib.h \
capd/dynset/mplib.h \
capd/dynset/reorganization/CanonicalReorganization.h \
capd/dynset/reorganization/CoordWiseReorganization.h \
capd/dynset/reorganization/FactorPolicy.h \
capd/dynset/reorganization/FactorReorganization.h \
capd/dynset/reorganization/InvBByCFactorReorganization.h \
capd/dynset/reorganization/NoReorganization.h \
capd/dynset/reorganization/QRReorganization.h \
capd/dynset/reorganization/SwapReorganization.h \
capd/dynset/typedefs.h \
capd/dynsys/approveRemainder.h \
capd/dynsys/BasicC2Solver.h \
capd/dynsys/BasicC2Solver.hpp \
capd/dynsys/BasicCnSolver.h \
capd/dynsys/BasicCnSolver.hpp \
capd/dynsys/BasicFadTaylor.h \
capd/dynsys/BasicFadTaylor.hpp \
capd/dynsys/BasicSolver.h \
capd/dynsys/BasicSolver.hpp \
capd/dynsys/C1DynSys.h \
capd/dynsys/C2DynSys.h \
capd/dynsys/C2Solver.h \
capd/dynsys/C2Solver.hpp \
capd/dynsys/CnDynSys.h \
capd/dynsys/CnSolver.h \
capd/dynsys/CnSolver.hpp \
capd/dynsys/CnSolver_enclosure.hpp \
capd/dynsys/CnSolver_phi.hpp \
capd/dynsys/CnSolver_remainder.hpp \
capd/dynsys/CnSolver_templateMembers.h \
capd/dynsys/DiscreteDynSys.h \
capd/dynsys/DynSys.h \
capd/dynsys/DynSys.hpp \
capd/dynsys/DynSysMap.h \
capd/dynsys/FadMap.h \
capd/dynsys/FadTaylor.h \
capd/dynsys/FadTaylor.hpp \
capd/dynsys/FadTaylorHOE.h \
capd/dynsys/FadTaylorHOE.hpp \
capd/dynsys/deprecated/Linear2d.h \
capd/dynsys/deprecated/Linear3d.h \
capd/dynsys/Move.h \
capd/dynsys/deprecated/OdeNumTaylor.h \
capd/dynsys/deprecated/OdeNumTaylor.hpp \
capd/dynsys/OdeTraits.h \
capd/dynsys/Solver.h \
capd/dynsys/Solver.hpp \
capd/dynsys/SolverException.h \
capd/dynsys/SolverHOE.h \
capd/dynsys/SolverHOE.hpp \
capd/dynsys/StepControl.h \
capd/dynsys/deprecated/VLin3D.h \
capd/dynsys/deprecated/dynsysLib.h \
capd/dynsys/enclosure.h \
capd/dynsys/enclosure.hpp \
capd/dynsys/fdlib.h \
capd/dynsys/filibfadbad.h \
capd/dynsys/highOrderEnclosure.h \
capd/dynsys/lib.h \
capd/dynsys/mplib.h \
capd/dynsys/typedefs.h \
capd/fdcapdlib.h \
capd/geomset/AffineSet.h \
capd/geomset/AffineSet.hpp \
capd/geomset/CenteredAffineSet.h \
capd/geomset/CenteredAffineSet.hpp \
capd/geomset/CenteredDoubletonSet.h \
capd/geomset/CenteredDoubletonSet.hpp \
capd/geomset/CenteredTripletonSet.h \
capd/geomset/CenteredTripletonSet.hpp \
capd/geomset/DoubletonSet.h \
capd/geomset/DoubletonSet.hpp \
capd/geomset/MatrixAffineSet.h \
capd/geomset/MatrixAffineSet.hpp \
capd/geomset/MatrixDoubletonSet.h \
capd/geomset/MatrixDoubletonSet.hpp \
capd/geomset/lib.h \
capd/invset/CubicalMap.h \
capd/invset/ForbiddenSet.h \
capd/invset/Graph.h \
capd/invset/GraphNode.h \
capd/invset/MapGraph.h \
capd/invset/Scope.h \
capd/invset/invariantSets.h \
capd/map/BasicFunction.h \
capd/map/BasicFunction.hpp \
capd/map/CnCoeffSlice.h \
capd/map/DefaultOrder.h \
capd/map/Function.h \
capd/map/Function.hpp \
capd/map/Map.h \
capd/map/Map.hpp \
capd/map/Map_codeTranslation.hpp \
capd/map/Map_headerTemplate.h \
capd/map/Parser.h \
capd/map/fdlib.h \
capd/map/lib.h \
capd/map/mapLib.h \
capd/map/mplib.h \
capd/mpcapdlib.h \
capd/newton/Krawczyk.h \
capd/newton/Krawczyk.hpp \
capd/newton/Mapping.h \
capd/newton/Newton.h \
capd/newton/Newton.hpp \
capd/newton/NewtonResult.h \
capd/normalForms/linearSubstitution.hpp \
capd/normalForms/normalForms.h \
capd/normalForms/planarMaps.hpp \
capd/pdes/PolynomialBound.h \
capd/pdes/PolynomialBound.hpp \
capd/poincare/AbstractSection.h \
capd/poincare/AbstractSection.hpp \
capd/poincare/AffineSection.h \
capd/poincare/BasicPoincareMap.h \
capd/poincare/BasicPoincareMap.hpp \
capd/poincare/BasicPoincareMap_inline.h \
capd/poincare/BasicPoincareMap_operator.hpp \
capd/poincare/BasicPoincareMap_template.h \
capd/poincare/CoordinateSection.h \
capd/poincare/NonlinearSection.h \
capd/poincare/PoincareException.h \
capd/poincare/PoincareMap.h \
capd/poincare/PoincareMap.hpp \
capd/poincare/PoincareMap_templateMembers.h \
capd/poincare/PoincareMap_templateOperator.h \
capd/poincare/SaveStepControl.h \
capd/poincare/TimeMap.h \
capd/poincare/TimeMap.hpp \
capd/poincare/TimeMap_inline.h \
capd/poincare/TimeMap_template.h \
capd/poincare/fdlib.h \
capd/poincare/lib.h \
capd/poincare/mplib.h \
capd/poincare/poincareLib.h \
capd/poincare/typedefs.h


