noinst_PROGRAMS = ExOsc1D
ExOsc1D_SOURCES = ExOsc1D.cpp ExampleFobjOsc1D_1.cpp \
					ExampleFobjOsc1D_1.hpp ExampleFobjOscPI.hpp \
					ExampleFobjOsc1D_2.cpp ExampleFobjOsc1D_2.hpp \
					ExampleFobjOsc1D_3.cpp ExampleFobjOsc1D_3.hpp
#EXTRA_DIST =
ExOsc1D_CPPFLAGS = -I${top_builddir}/src
ExOsc1D_LDADD = -lcxsc ${top_builddir}/src/libmrs.a
