
noinst_PROGRAMS = BinomialPartition
BinomialPartition_SOURCES = BinomialPartition.cpp ../../targets/FBinomialPartition.cpp ../../targets/FBinomialPartition.hpp
EXTRA_DIST = 
BinomialPartition_CPPFLAGS = -I${top_builddir}/src -I../../targets
BinomialPartition_LDADD = -lcxsc ${top_builddir}/src/libmrs.a
